# assignment1-basics

./: .gitignore  download_data.sh  pyproject.toml
cs336_basics/: bpe.py
cs336_basics/cppbpe/: CMakeLists.txt  c_bpe.cpp
tests/: adapters.py  run_tokenizer_train.py
